/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id "java"
    id "io.spring.dependency-management" version "1.1.0"
}

group = 'jp.co.toshiba.ppok'
version = '1.0-SNAPSHOT'
description = 'sshcrud'
java.sourceCompatibility = JavaVersion.VERSION_17

repositories {
    mavenCentral()
    maven { url "https://repo.spring.io/libs-spring-framework-build" }
    maven { url "https://repo.spring.io/plugins-release" }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
}

dependencyManagement {
    imports {
        mavenBom 'org.springframework.boot:spring-boot-starter-parent:3.1.4'
    }
}

dependencies {
    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter
	implementation 'org.springframework.boot:spring-boot-starter'
    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web
	implementation 'org.springframework.boot:spring-boot-starter-web'
    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools
	implementation 'org.springframework.boot:spring-boot-devtools'
    // https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc11
	implementation 'com.oracle.database.jdbc:ojdbc11'
    // https://mvnrepository.com/artifact/com.google.guava/guava
	implementation 'com.google.guava:guava:32.1.2-jre'
    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
    // https://mvnrepository.com/artifact/org.projectlombok/lombok
	compileOnly 'org.projectlombok:lombok'
}

test {
    useJUnitPlatform()
}
